--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,48 +1,16 @@
 <body class="min-h-screen bg-background">
     <!-- Header -->
-    <header class="z-50 h-24 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-36 lg:px-0">
-        <!-- Logo y nombre de la institucion -->
-        <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
-            <div class="flex items-center xl:gap-5">
-                <a href="" class="hidden w-1/3 lg:flex lg:justify-center">
-                    <img draggable="false" class="h-16 w-18 xl:h-20" src="../../assets/Yale_School_of_Art_Logo.png" alt="Logo">
-                </a>
-                <a class="w-2/3 max-w-[200px] text-xl text-white font-bold sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
-            </div>
-            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
-            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
-        </div>
-    
-    
-        <!-- Contenedor de links -->
-        <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
-            <a href="" class="hover:text-darkYellow">Inicio</a>
-            <a href="about" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
-            <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-            <a href="foro" class="hover:text-darkYellow">Foro</a>
-            <a href="contacto" class="hover:text-darkYellow">Contacto</a>
-        </div>
-    </header>
-    
+    <app-header class="sticky top-0 z-50"></app-header>
     
     <!-- Contenido -->
-    <div class="h-full animate-load">
-        <!-- Menu de navegacion mobil -->
-        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
-            <a href="" class="active:text-darkYellow">Inicio</a>
-            <a href="about" class="active:text-darkYellow">Sobre Nosotros</a>
-            <a href="#carreras" class="active:text-darkYellow">Carreras</a>
-            <a href="foro" class="active:text-darkYellow">Foro</a>
-            <a href="contacto" class="active:text-darkYellow">Contacto</a>
-        </div>
-        
+    <div class="h-full animate-load">        
         <!-- Descripcion -->
         <div class="px-10 md:px-14 md:my-2 lg:px-32 xl:px-[11.5rem]">
             <h1 class="text-2xl mt-4 pb-2 font-bold text-savoyBlue sm:text-4xl md:pt-4 md:pb-0">Contacto</h1>
 
             <!-- Contacto -->
             <div>
-                <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Registro y Admisión</h1>
+                <h1 class="text-lg pb-2 font-semibold text-savoyBlue sm:text-2xl md:pt-4">Registro y Admisión</h1>
                 <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <p class="text-sm text-white mb-2 md:mb-4 md:text-lg xl:text-xl">203-432-2600</p>
                     <a class="text-sm text-white underline mb-2 md:mb-4 md:text-lg xl:text-xl" href="mailto:art.admissions@yale.edu">art.admissions@yale.edu</a>
@@ -52,7 +20,7 @@
             
             <!-- Contacto -->
             <div class="my-4">
-                <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Apoyo Financiero</h1>
+                <h1 class="text-lg pb-2 font-semibold text-savoyBlue sm:text-2xl md:pt-4">Apoyo Financiero</h1>
                 <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:nicole.archer@yale.edu">nicole.archer@yale.edu</a>
                 </div>
@@ -60,7 +28,7 @@
             
             <!-- Contacto -->
             <div class="my-4">
-                <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Oficina de Tecnología Digital</h1>
+                <h1 class="text-lg pb-2 font-semibold text-savoyBlue sm:text-2xl md:pt-4">Oficina de Tecnología Digital</h1>
                 <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <p class="text-sm text-white mb-2 md:mb-4 md:text-lg xl:text-xl">203-432-9120</p>
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:art.help@yale.edu">art.help@yale.edu</a>
@@ -69,7 +37,7 @@
             
             <!-- Contacto -->
             <div class="my-4">
-                <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Donaciones y Regalos</h1>
+                <h1 class="text-lg pb-2 font-semibold text-savoyBlue sm:text-2xl md:pt-4">Donaciones y Regalos</h1>
                 <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <a class="text-sm text-white underline mb-2 md:text-lg xl:text-xl" href="mailto:nicole.freeman@yale.edu">nicole.freeman@yale.edu</a>
                 </div>
@@ -77,7 +45,7 @@
             
             <!-- Contacto -->
             <div class="my-4">
-                <h1 class="text-lg pb-2 font-bold text-savoyBlue sm:text-2xl md:pt-4">Redes Sociales</h1>
+                <h1 class="text-lg pb-2 font-semibold text-savoyBlue sm:text-2xl md:pt-4">Redes Sociales</h1>
                 <div class="p-4 flex flex-col items-center bg-indigo/70 rounded-bl-3xl rounded-tr-3xl md:items-start md:pl-10 md:p-8">
                     <a class="text-sm text-white underline mb-2 md:mb-4 md:text-lg xl:text-xl" href="https://www.facebook.com/YaleSchoolofArt/" target="_blank">Buscanos en Facebook</a>
                     <a class="text-sm text-white underline mb-2 md:mb-4 md:text-lg xl:text-xl" href="https://www.instagram.com/yaleschoolofart/" target="_blank">Síguenos en Instagram</a>
