--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="h-36 w-screen bg-darkGray">
+<footer class="w-screen h-full bg-darkGray py-4 xl:py-8">
     <div class="h-full w-full flex md:px-12">
         <!-- Nombre y dirección de la institucion -->
         <div class="w-2/3 flex items-center sm:w-1/2">
@@ -10,7 +10,7 @@
         </div>
     
         <!-- Contenedor de links -->
-        <div class="select-none h-full w-1/3 flex flex-col grow gap-3 justify-center items-center font-semibold sm:w-1/2 sm:flex-row md:gap-10 lg:pr-8 lg:text-xl xl:pr-0 xl:gap-28 xl:text-2xl">
+        <div class="select-none h-full w-1/3 my-auto flex flex-col grow gap-3 justify-center items-center font-semibold sm:w-1/2 sm:flex-row md:gap-10 lg:pr-8 lg:text-xl xl:pr-0 xl:gap-28 xl:text-2xl">
             <a href="https://www.facebook.com/YaleSchoolofArt/" target="_blank">
                 <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/facebook.svg" alt="Facebook" draggable="false">
             </a>
@@ -27,6 +27,5 @@
                 <img class="w-5 h-5 sm:w-8 sm:h-8 lg:w-10 lg:h-10" src="../../assets/mail.svg" alt="Correo" draggable="false">
             </a>
         </div>
-
     </div>
 </footer>
