--- a/src/app/foro/foro.component.html
+++ b/src/app/foro/foro.component.html
@@ -1,61 +1,29 @@
 <body class="min-h-screen bg-background">
     <!-- Header -->
-    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-32 lg:h-32 lg:px-0">
-        <!-- Logo y nombre de la institucion -->
-        <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
-            <div class="flex items-center xl:gap-5">
-                <a href="" class="hidden w-1/3 lg:flex lg:justify-center">
-                    <img draggable="false" class="h-16 w-18 xl:h-20" src="../../assets/Yale_School_of_Art_Logo.png" alt="Logo">
-                </a>
-                <a class="w-2/3 max-w-[200px] text-xl text-white font-bold sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
-            </div>
-            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
-            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
-        </div>
-    
-    
-        <!-- Contenedor de links -->
-        <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
-            <a href="" class="hover:text-darkYellow">Inicio</a>
-            <a href="about" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
-            <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-            <a href="foro" class="hover:text-darkYellow">Foro</a>
-            <a href="contacto" class="hover:text-darkYellow">Contacto</a>
-        </div>
-    </header>
-    
+    <app-header class="sticky top-0 z-50"></app-header>    
     
     <!-- Contenido -->
     <div class="h-full animate-load">
-        <!-- Menu de navegacion mobil -->
-        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
-            <a href="" class="active:text-darkYellow">Inicio</a>
-            <a href="about" class="active:text-darkYellow">Sobre Nosotros</a>
-            <a href="#carreras" class="active:text-darkYellow">Carreras</a>
-            <a href="foro" class="active:text-darkYellow">Foro</a>
-            <a href="contacto" class="active:text-darkYellow">Contacto</a>
-        </div>
-
-
         <!-- Subheader -->
         <header class="w-full min-h-[56px] flex grow items-center py-2 px-4 bg-background2 md:h-16 md:pl-14 lg:pl-32 xl:h-20 xl:pl-48">
             <div class="px-5 flex grow justify-between items-center md:pl-0 xl:pr-40">
                 <h1 class="text-sm text-davysGray/70 pr-10 font-semibold md:text-base xl:text-lg">Inicia sesión para compartir tus proyectos</h1>
-                <img class="h-5 w-5 md:hidden active:animate-shrink" src="../../assets/login-icon.svg" alt="Login" routerLink="login">
-                <button class="hidden h-fit w-fit max-w-[112px] ml-2 px-4 py-1 rounded-full text-sm justify-self-end text-white font-bold bg-indigo md:block md:w-1/6 md:ml-0 md:h-8 xl:h-10 xl:text-lg active:animate-shrink" routerLink="login">Login</button>
+                <img class="h-5 w-5 md:hidden active:animate-shrink" src="../../assets/login-icon.svg" alt="Login" routerLink="/login">
+                <button class="hidden h-fit w-fit max-w-[112px] ml-2 px-4 py-1 rounded-full text-sm justify-self-end text-white font-bold bg-indigo md:block md:w-1/6 md:ml-0 md:h-8 xl:h-10 xl:text-lg hover:text-darkYellow hover:text-xl active:animate-shrink" routerLink="/login">Login</button>
             </div>
         </header>
-
 
         <!-- Feed -->
         <div class="flex flex-col items-center gap-4 px-8 my-4 lg:px-32 xl:px-48">
             <!-- Publicacion 1 -->
-            <div class="max-w-[320px] px-6 py-2 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:justify-center">
-                <!-- Datos publicacion -->
-                <div class="relative h-12 w-full text-sm flex flex-col gap-1 lg:hidden">
-                    <h1 class="font-semibold lg:text-base">Ivan Hnilicka</h1>
-                    <h1>31/10/2023</h1>
-                    <div class="absolute top-2 right-2 flex gap-2">
+            <div class="max-w-[320px] px-6 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:py-2 lg:justify-center">
+                <!-- Datos publicacion (screen sm -> md) -->
+                <div class="w-full py-4 text-sm flex lg:hidden">
+                    <div class="w-2/3 flex flex-col">
+                        <h1 class="font-semibold lg:text-base">Ivan Hnilicka</h1>
+                        <h1>31/10/2023</h1>
+                    </div>
+                    <div class="w-1/3 h-fit right-2 flex justify-end gap-2">
                         <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                         <p>31</p>
                     </div>
@@ -72,11 +40,13 @@
                                 Una pintura que combina elementos antiguos y modernos, recordando la interconexión entre el pasado y el presente.
                             </h1>
                         </div>
-                        
-                        <div class="hidden relative h-12 w-full text-sm flex-col gap-1 lg:flex">
-                            <h1 class="font-semibold lg:text-base">Ivan Hnilicka</h1>
-                            <h1>31/10/2023</h1>
-                            <div class="absolute top-2 right-2 flex gap-2">
+                        <!-- Datos publicacion (screen lg -> xl) -->
+                        <div class="hidden relative h-12 w-full text-sm gap-1 lg:flex">
+                            <div class="w-2/3 flex flex-col">
+                                <h1 class="font-semibold lg:text-base">Ivan Hnilicka</h1>
+                                <h1>31/10/2023</h1>
+                            </div>
+                            <div class="w-1/3 h-fit flex justify-end gap-2">
                                 <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                                 <p>31</p>
                             </div>
@@ -86,12 +56,14 @@
             </div>
 
             <!-- Publicacion 2 -->
-            <div class="max-w-[320px] px-6 py-2 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:justify-center">
-                <!-- Datos publicacion -->
-                <div class="relative h-12 w-full text-sm flex flex-col gap-1 lg:hidden">
-                    <h1 class="font-semibold lg:text-base">Ximena Hnilicka</h1>
-                    <h1>29/10/2023</h1>
-                    <div class="absolute top-2 right-2 flex gap-2">
+            <div class="max-w-[320px] px-6 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:py-2 lg:justify-center">
+                <!-- Datos publicacion (screen sm -> md) -->
+                <div class="w-full py-4 text-sm flex lg:hidden">
+                    <div class="w-2/3 flex flex-col gap-1">
+                        <h1 class="font-semibold lg:text-base">Ximena Hnilicka</h1>
+                        <h1>29/10/2023</h1>
+                    </div>
+                    <div class="w-1/3 h-fit right-2 flex justify-end gap-2">
                         <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                         <p>45</p>
                     </div>
@@ -108,11 +80,13 @@
                                 Una pintura abstracta que evoca la sensación de estar inmerso en un océano de pensamientos y emociones.
                             </h1>
                         </div>
-                        
-                        <div class="hidden relative h-12 w-full text-sm flex-col gap-1 lg:flex">
-                            <h1 class="font-semibold lg:text-base">Ximena Hnilicka</h1>
-                            <h1>29/10/2023</h1>
-                            <div class="absolute top-2 right-2 flex gap-2">
+                        <!-- Datos publicacion (screen lg -> xl) -->
+                        <div class="hidden relative h-12 w-full text-sm gap-1 lg:flex">
+                            <div class="w-2/3 flex flex-col">
+                                <h1 class="font-semibold lg:text-base">Ximena Hnilicka</h1>
+                                <h1>29/10/2023</h1>
+                            </div>
+                            <div class="w-1/3 h-fit flex justify-end gap-2">
                                 <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                                 <p>45</p>
                             </div>
@@ -122,12 +96,14 @@
             </div>
 
             <!-- Publicacion 3 -->
-            <div class="max-w-[320px] px-6 py-2 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:justify-center">
-                <!-- Datos publicacion -->
-                <div class="relative h-12 w-full text-sm flex flex-col gap-1 lg:hidden">
-                    <h1 class="font-semibold lg:text-base">Ilse Cervantes</h1>
-                    <h1>29/10/2023</h1>
-                    <div class="absolute top-2 right-2 flex gap-2">
+            <div class="max-w-[320px] px-6 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:py-2 lg:justify-center">
+                <!-- Datos publicacion (screen sm -> md) -->
+                <div class="w-full py-4 text-sm flex lg:hidden">
+                    <div class="w-2/3 flex flex-col gap-1">
+                        <h1 class="font-semibold lg:text-base">Ilse Cervantes</h1>
+                        <h1>29/10/2023</h1>
+                    </div>
+                    <div class="w-1/3 h-fit right-2 flex justify-end gap-2">
                         <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                         <p>27</p>
                     </div>
@@ -144,11 +120,13 @@
                                 Una obra de arte abstracto que desafía la percepción del espectador con patrones geométricos en constante cambio.
                             </h1>
                         </div>
-                        
-                        <div class="hidden relative h-12 w-full text-sm flex-col gap-1 lg:flex">
-                            <h1 class="font-semibold lg:text-base">Ilse Cervantes</h1>
-                            <h1>29/10/2023</h1>
-                            <div class="absolute top-2 right-2 flex gap-2">
+                        <!-- Datos publicacion (screen lg -> xl) -->
+                        <div class="hidden relative h-12 w-full text-sm gap-1 lg:flex">
+                            <div class="w-2/3 flex flex-col">
+                                <h1 class="font-semibold lg:text-base">Ilse Cervantes</h1>
+                                <h1>29/10/2023</h1>
+                            </div>
+                            <div class="w-1/3 h-fit flex justify-end gap-2">
                                 <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                                 <p>27</p>
                             </div>
@@ -158,12 +136,14 @@
             </div>
 
             <!-- Publicacion 4 -->
-            <div class="max-w-[320px] px-6 py-2 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:justify-center">
-                <!-- Datos publicacion -->
-                <div class="relative h-12 w-full text-sm flex flex-col gap-1 lg:hidden">
-                    <h1 class="font-semibold lg:text-base">Manuel Ramirez</h1>
-                    <h1>28/10/2023</h1>
-                    <div class="absolute top-2 right-2 flex gap-2">
+            <div class="max-w-[320px] px-6 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:py-2 lg:justify-center">
+                <!-- Datos publicacion (screen sm -> md) -->
+                <div class="w-full py-4 text-sm flex lg:hidden">
+                    <div class="w-2/3 flex flex-col gap-1">
+                        <h1 class="font-semibold lg:text-base">Manuel Ramirez</h1>
+                        <h1>28/10/2023</h1>
+                    </div>
+                    <div class="w-1/3 h-fit right-2 flex justify-end gap-2">
                         <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                         <p>18</p>
                     </div>
@@ -180,11 +160,13 @@
                                 Una abstracción que juega con la mezcla de colores y formas para crear una sensación de equilibrio y serenidad.
                             </h1>
                         </div>
-                        
-                        <div class="hidden relative h-12 w-full text-sm flex-col gap-1 lg:flex">
-                            <h1 class="font-semibold lg:text-base">Manuel Ramirez</h1>
-                            <h1>28/10/2023</h1>
-                            <div class="absolute top-2 right-2 flex gap-2">
+                        <!-- Datos publicacion (screen lg -> xl) -->
+                        <div class="hidden relative h-12 w-full text-sm gap-1 lg:flex">
+                            <div class="w-2/3 flex flex-col">
+                                <h1 class="font-semibold lg:text-base">Manuel Ramirez</h1>
+                                <h1>28/10/2023</h1>
+                            </div>
+                            <div class="w-1/3 h-fit flex justify-end gap-2">
                                 <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                                 <p>18</p>
                             </div>
@@ -194,12 +176,14 @@
             </div>
             
             <!-- Publicacion 5 -->
-            <div class="max-w-[320px] px-6 py-2 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:justify-center">
-                <!-- Datos publicacion -->
-                <div class="relative h-12 w-full text-sm flex flex-col gap-1 lg:hidden">
-                    <h1 class="font-semibold lg:text-base">Erick Hnilicka</h1>
-                    <h1>27/10/2023</h1>
-                    <div class="absolute top-2 right-2 flex gap-2">
+            <div class="max-w-[320px] px-6 flex flex-col bg-white md:max-w-[520px] lg:max-w-full lg:w-full lg:min-h-[300px] lg:py-2 lg:justify-center">
+                <!-- Datos publicacion (screen sm -> md) -->
+                <div class="w-full py-4 text-sm flex lg:hidden">
+                    <div class="w-2/3 flex flex-col gap-1">
+                        <h1 class="font-semibold lg:text-base">Erick Hnilicka</h1>
+                        <h1>27/10/2023</h1>
+                    </div>
+                    <div class="w-1/3 h-fit right-2 flex justify-end gap-2">
                         <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                         <p>25</p>
                     </div>
@@ -216,11 +200,13 @@
                                 Una pintura que combina elementos antiguos y modernos, recordando la interconexión entre el pasado y el presente.
                             </h1>
                         </div>
-                        
-                        <div class="hidden relative h-12 w-full text-sm flex-col gap-1 lg:flex">
-                            <h1 class="font-semibold lg:text-base">Erick Hnilicka</h1>
-                            <h1>27/10/2023</h1>
-                            <div class="absolute top-2 right-2 flex gap-2">
+                        <!-- Datos publicacion (screen lg -> xl) -->
+                        <div class="hidden relative h-12 w-full text-sm gap-1 lg:flex">
+                            <div class="w-2/3 flex flex-col">
+                                <h1 class="font-semibold lg:text-base">Erick Hnilicka</h1>
+                                <h1>27/10/2023</h1>
+                            </div>
+                            <div class="w-1/3 h-fit flex justify-end gap-2">
                                 <button><img draggable="false" src="../../assets/like-icon.svg" alt="Heart"></button>
                                 <p>25</p>
                             </div>
