--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,33 @@
-<header class="h-24 w-screen mb-32 p-2 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 sm:px-6">
+<!-- Header -->
+<header class="h-20 w-screen px-4 flex grow items-center bg-indigo drop-shadow-2xl sm:h-28 lg:h-32 lg:px-0">
     <!-- Logo y nombre de la institucion -->
-    <div class="w-1/2 px-4 flex grow justify-between items-center">
-        <div class="flex items-center">
-            <a href="">
+    <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
+        <div class="flex items-center xl:gap-5">
+            <a href="" class="hidden w-1/3 lg:flex lg:justify-center">
                 <img draggable="false" class="h-16 w-18 xl:h-20" src="../../assets/Yale_School_of_Art_Logo.png" alt="Logo">
             </a>
-            <a class="w-2/3 max-w-[150px] text-2xl ml-6 text-white font-bold xs:text-2xl sm:max-w-[200px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
+            <a class="w-2/3 max-w-[200px] text-xl text-white font-bold sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
         </div>
-        <img class="h-6 w-6 md:mr-4 lg:hiddena active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu">
+        <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = true">
     </div>
 
 
     <!-- Contenedor de links -->
-    <div class="w-2/3 hidden px-14 justify-between items-center text-md text-white font-semibold lg:flex lg:text-lg xl:text-xl">
-        <a href="#" class="hover:text-darkYellow">Inicio</a>
-        <a href="#" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
+    <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
+        <a href="" class="hover:text-darkYellow">Inicio</a>
+        <a href="about" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
         <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-        <a href="#" class="hover:text-darkYellow">Foro</a>
-        <a href="#" class="hover:text-darkYellow">Contacto</a>
+        <a href="foro" class="hover:text-darkYellow">Foro</a>
+        <a href="contacto" class="hover:text-darkYellow">Contacto</a>
     </div>
 </header>
+
+<!-- Menu de navegacion mobil -->
+<div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil">
+    <img class="absolute top-7 right-9 h-6 w-6 md:top-12 md:right-16 md:mt-1 md:mr-2 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = false">
+    <a href="" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Inicio</a>
+    <a href="about" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Sobre Nosotros</a>
+    <a href="#carreras" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Carreras</a>
+    <a href="foro" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Foro</a>
+    <a href="contacto" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Contacto</a>
+</div>
