--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,41 +1,9 @@
 <body class="min-h-screen bg-background">
     <!-- Header -->
-    <header class="z-50 h-20 w-screen px-4 sticky top-0 flex grow items-center bg-indigo drop-shadow-2xl sm:h-32 lg:px-0">
-        <!-- Logo y nombre de la institucion -->
-        <div class="w-1/3 px-5 flex grow justify-between items-center sm:px-10 lg:px-6 xl:px-10">
-            <div class="flex items-center xl:gap-5">
-                <a href="" class="hidden w-1/3 lg:flex lg:justify-center">
-                    <img draggable="false" class="h-16 w-18 xl:h-20" src="../../assets/Yale_School_of_Art_Logo.png" alt="Logo">
-                </a>
-                <a class="w-2/3 max-w-[200px] text-xl text-white font-bold sm:text-2xl sm:max-w-[250px] md:text-3xl xl:max-w-full xl:text-4xl" href="">Yale School of Art</a>
-            </div>
-            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/hamburger.svg" alt="Menu" *ngIf="!menuMovil" (click)="menuMovil = !menuMovil">
-            <img class="h-6 w-6 md:mr-4 lg:mr-14 xl:hidden active:animate-shrink" src="../../assets/x-close.svg" alt="Menu" *ngIf="menuMovil" (click)="menuMovil = !menuMovil">
-        </div>
-    
-    
-        <!-- Contenedor de links -->
-        <div class="w-2/3 hidden px-40 gap-16 justify-end items-center text-lg text-white font-semibold xl:text-xl xl:flex xl:px-48 xl:gap-24" >
-            <a href="" class="hover:text-darkYellow">Inicio</a>
-            <a href="about" class="text-center hover:text-darkYellow">Sobre Nosotros</a>
-            <a href="#carreras" class="hover:text-darkYellow">Carreras</a>
-            <a href="foro" class="hover:text-darkYellow">Foro</a>
-            <a href="contacto" class="hover:text-darkYellow">Contacto</a>
-        </div>
-    </header>
-    
+    <app-header class="sticky top-0 z-50"></app-header>
     
     <!-- Contenido -->
-    <div class="h-full animate-load">
-        <!-- Menu de navegacion mobil -->
-        <div class="w-full h-full flex flex-col gap-12 justify-center text-center text-xl text-white font-bold fixed z-20 bottom-0 bg-indigo/80" *ngIf="menuMovil" >
-            <a href="" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Inicio</a>
-            <a href="about" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Sobre Nosotros</a>
-            <a href="#carreras" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Carreras</a>
-            <a href="foro" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Foro</a>
-            <a href="contacto" class="active:text-darkYellow" (click)="cerrarMenuMovil()">Contacto</a>
-        </div>
-        
+    <div class="h-full animate-load z-0">        
         <!-- Noticias -->
         <div class="w-screen h-[292px] px-2 pt-4 flex sm:px-16 md:px-4 md:gap-4 lg:px-10 lg:mb-28 lg:gap-2 xl:gap-14 xl:px-24">
             <button class="w-8 h-[160px] flex justify-center items-center active:animate-shrink active:text-xl lg:h-[200px] xl:h-64" (click)="slideBack(); resetTimer()"> 
